<resources>
    <!-- Form -->
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="agama">Agama</string>
    <string name="simpan_biodata">Simpan Biodata</string>
    <string name="msg_field_kosong">Semua field harus diisi!</string>

    <!-- Hasil -->
    <string name="hasil_nama">Nama     : %1$s</string>
    <string name="hasil_alamat">Alamat   : %1$s</string>
    <string name="hasil_tanggal">Tanggal  : %1$s</string>
    <string name="hasil_gender">Gender   : %1$s</string>
    <string name="hasil_agama">Agama    : %1$s</string>
    <string name="app_name" />
</resources>
